{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 61,
  "lineage": "a9c079e6-f0f7-2f6c-6f0a-a4c9c3454900",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:loadbalancer/app/swarm-alb/2583f387280abd89",
            "arn_suffix": "app/swarm-alb/2583f387280abd89",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "swarm-alb-655732349.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:loadbalancer/app/swarm-alb/2583f387280abd89",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "swarm-alb",
            "preserve_host_header": false,
            "region": "eu-north-1",
            "security_groups": [
              "sg-04553ba1b5a89f314"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-071e8ebe69cbe3e1e"
              },
              {
                "subnet_id": "subnet-0cb8ca1220e5d7d2b"
              }
            ],
            "subnets": [
              "subnet-071e8ebe69cbe3e1e",
              "subnet-0cb8ca1220e5d7d2b"
            ],
            "vpc_id": "vpc-0b113b9a56c01b048",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:loadbalancer/app/swarm-alb/2583f387280abd89"
          },
          "dependencies": [
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:listener/app/swarm-alb/2583f387280abd89/d72ac40547e90bc2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:targetgroup/swarm-tg/eb95ef6f986ac0d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:listener/app/swarm-alb/2583f387280abd89/d72ac40547e90bc2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:loadbalancer/app/swarm-alb/2583f387280abd89",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-north-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:listener/app/swarm-alb/2583f387280abd89/d72ac40547e90bc2"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.tg",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:targetgroup/swarm-tg/eb95ef6f986ac0d7",
            "arn_suffix": "targetgroup/swarm-tg/eb95ef6f986ac0d7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:targetgroup/swarm-tg/eb95ef6f986ac0d7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "swarm-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-north-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b113b9a56c01b048"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:targetgroup/swarm-tg/eb95ef6f986ac0d7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:targetgroup/swarm-tg/eb95ef6f986ac0d7-20260115083758683400000008",
            "port": 80,
            "region": "eu-north-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:targetgroup/swarm-tg/eb95ef6f986ac0d7",
            "target_id": "i-02ca5f065313bdb1c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.latest_al2023",
            "module.alb.aws_lb_target_group.tg",
            "module.ec2.aws_instance.swarm",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:targetgroup/swarm-tg/eb95ef6f986ac0d7-20260115083758379600000007",
            "port": 80,
            "region": "eu-north-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:targetgroup/swarm-tg/eb95ef6f986ac0d7",
            "target_id": "i-017e2f745c522efe3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.latest_al2023",
            "module.alb.aws_lb_target_group.tg",
            "module.ec2.aws_instance.swarm",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:targetgroup/swarm-tg/eb95ef6f986ac0d7-20260115083758077900000006",
            "port": 80,
            "region": "eu-north-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:788203229933:targetgroup/swarm-tg/eb95ef6f986ac0d7",
            "target_id": "i-00d99cdfd1035071e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ssm_parameter.latest_al2023",
            "module.alb.aws_lb_target_group.tg",
            "module.ec2.aws_instance.swarm",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "swarm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0683ee28af6610487",
            "arn": "arn:aws:ec2:eu-north-1:788203229933:instance/i-02ca5f065313bdb1c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ca5f065313bdb1c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "training",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ba9bb6da2132c0a8"
              }
            ],
            "primary_network_interface_id": "eni-0ba9bb6da2132c0a8",
            "private_dns": "ip-10-0-0-73.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.73",
            "public_dns": "ec2-13-49-224-124.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.49.224.124",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0476a7bac0e05fdec",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb8ca1220e5d7d2b",
            "tags": {
              "Name": "swarm-master"
            },
            "tags_all": {
              "Name": "swarm-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04553ba1b5a89f314"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "788203229933",
            "id": "i-02ca5f065313bdb1c",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_ssm_parameter.latest_al2023",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0683ee28af6610487",
            "arn": "arn:aws:ec2:eu-north-1:788203229933:instance/i-017e2f745c522efe3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017e2f745c522efe3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "training",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fd183ce622f313b6"
              }
            ],
            "primary_network_interface_id": "eni-0fd183ce622f313b6",
            "private_dns": "ip-10-0-1-23.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.23",
            "public_dns": "ec2-56-228-27-63.eu-north-1.compute.amazonaws.com",
            "public_ip": "56.228.27.63",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cff191b801af0843",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071e8ebe69cbe3e1e",
            "tags": {
              "Name": "swarm-worker-1"
            },
            "tags_all": {
              "Name": "swarm-worker-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04553ba1b5a89f314"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "788203229933",
            "id": "i-017e2f745c522efe3",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_ssm_parameter.latest_al2023",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0683ee28af6610487",
            "arn": "arn:aws:ec2:eu-north-1:788203229933:instance/i-00d99cdfd1035071e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d99cdfd1035071e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "training",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f8cc9b9d4c3e3d47"
              }
            ],
            "primary_network_interface_id": "eni-0f8cc9b9d4c3e3d47",
            "private_dns": "ip-10-0-0-64.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.64",
            "public_dns": "ec2-51-21-245-6.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.245.6",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-054d06f793b07a1fd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb8ca1220e5d7d2b",
            "tags": {
              "Name": "swarm-worker-2"
            },
            "tags_all": {
              "Name": "swarm-worker-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04553ba1b5a89f314"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "788203229933",
            "id": "i-00d99cdfd1035071e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_ssm_parameter.latest_al2023",
            "module.security_group.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:788203229933:security-group/sg-04553ba1b5a89f314",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04553ba1b5a89f314",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20260115083727238200000001",
            "name_prefix": "terraform-",
            "owner_id": "788203229933",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "swarm-sg"
            },
            "tags_all": {
              "Name": "swarm-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b113b9a56c01b048"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "788203229933",
            "id": "sg-04553ba1b5a89f314",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:788203229933:internet-gateway/igw-04409a891f8ece642",
            "id": "igw-04409a891f8ece642",
            "owner_id": "788203229933",
            "region": "eu-north-1",
            "tags": {
              "Name": "swarm-igw"
            },
            "tags_all": {
              "Name": "swarm-igw"
            },
            "vpc_id": "vpc-0b113b9a56c01b048"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:788203229933:route-table/rtb-073fc8e019786de60",
            "id": "rtb-073fc8e019786de60",
            "owner_id": "788203229933",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04409a891f8ece642",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b113b9a56c01b048"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "788203229933",
            "id": "rtb-073fc8e019786de60",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e14d14b96953489c",
            "region": "eu-north-1",
            "route_table_id": "rtb-073fc8e019786de60",
            "subnet_id": "subnet-0cb8ca1220e5d7d2b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09013a6020d7956b8",
            "region": "eu-north-1",
            "route_table_id": "rtb-073fc8e019786de60",
            "subnet_id": "subnet-071e8ebe69cbe3e1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:788203229933:subnet/subnet-01109ad8419940680",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01109ad8419940680",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "788203229933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "swarm-private-0"
            },
            "tags_all": {
              "Name": "swarm-private-0"
            },
            "vpc_id": "vpc-0b113b9a56c01b048"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "788203229933",
            "id": "subnet-01109ad8419940680",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:788203229933:subnet/subnet-096e5c2e691a6a7f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096e5c2e691a6a7f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "788203229933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "swarm-private-1"
            },
            "tags_all": {
              "Name": "swarm-private-1"
            },
            "vpc_id": "vpc-0b113b9a56c01b048"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "788203229933",
            "id": "subnet-096e5c2e691a6a7f0",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:788203229933:subnet/subnet-0cb8ca1220e5d7d2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb8ca1220e5d7d2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "788203229933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "swarm-public-0"
            },
            "tags_all": {
              "Name": "swarm-public-0"
            },
            "vpc_id": "vpc-0b113b9a56c01b048"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "788203229933",
            "id": "subnet-0cb8ca1220e5d7d2b",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:788203229933:subnet/subnet-071e8ebe69cbe3e1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071e8ebe69cbe3e1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "788203229933",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "swarm-public-1"
            },
            "tags_all": {
              "Name": "swarm-public-1"
            },
            "vpc_id": "vpc-0b113b9a56c01b048"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "788203229933",
            "id": "subnet-071e8ebe69cbe3e1e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:788203229933:vpc/vpc-0b113b9a56c01b048",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07a9f3d75963d3a2f",
            "default_route_table_id": "rtb-019f8c8ee3ffd8e7d",
            "default_security_group_id": "sg-0fae9bc8be0801198",
            "dhcp_options_id": "dopt-0d62d394caece7c6b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b113b9a56c01b048",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-019f8c8ee3ffd8e7d",
            "owner_id": "788203229933",
            "region": "eu-north-1",
            "tags": {
              "Name": "swarm-vpc"
            },
            "tags_all": {
              "Name": "swarm-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "788203229933",
            "id": "vpc-0b113b9a56c01b048",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}